--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -18,7 +18,6 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>Služby - wordpress web - JP GENERATION</title>
     <link href="../../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../../css/style.css" rel="stylesheet">
     <link href="../../css/media.css" rel="stylesheet">
     <link href="../../css/keyframe.css" rel="stylesheet">
@@ -391,6 +390,7 @@
 <script src="../../js/nav.js" type="text/javascript"></script>
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
+<script src="https://kit.fontawesome.com/6d4730ed07.js" crossorigin="anonymous"></script>
 </body>
 </html>
 
