--- a/skuska-price-list/price-list.html
+++ b/skuska-price-list/price-list.html
@@ -97,5 +97,6 @@
     </div>
   </div>
 </div>
+<script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </body>
 </html>
